syntax = "proto3";

option java_multiple_files = true;

package org.hypertrace.notification.config.service.v1;

message NotificationRule {
  string id = 1;
  NotificationRuleMutableData notification_rule_mutable_data = 2;
}

message NotificationRuleMutableData {
  string rule_name = 1;
  string description = 2;

  string event_condition_id = 3;
  string event_condition_type = 4;

  string channel_id = 5 [deprecated=true];
  string rate_limit_interval_duration = 6;

  string sink_id = 7;
  SinkType sink_type = 8;
}

enum SinkType {
  SINK_TYPE_UNSPECIFIED = 0;
  SINK_TYPE_CHANNEL = 1;
  SINK_TYPE_WIZ_INTEGRATION = 2;
}
